--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -1,5 +1,5 @@
 .main {
-    background-image: linear-gradient(to top, rgba(150, 150, 150, 0.404) 0%, #00000085 100%);
+    background-image: linear-gradient(to top, rgba(45, 230, 116, 0.404) 0%, #00000085 100%);
     /* background-image: linear-gradient(to top, rgba(150, 150, 150, 0.404) 0%, #00000085 100%), url(./img/otro\ fondo.jpg); */
     /* background: url(../img/otra.jpg); */
     background-repeat: no-repeat;
@@ -8,4 +8,23 @@
     /* display: flexbox; */
     /* width: 100%;
     height: 100%; */
+}
+
+.text{
+    /* color: rgba(8, 4, 59, 0.753); */
+    margin-top: -10px;
+    color: black;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.info{
+    color: rgb(53, 52, 52);
+    font-size: 1rem;
+    text-align: center;
+}
+
+.logo{
+    width: 90px;
 }
