--- a/src/Components/RepoCards/repo.module.css
+++ b/src/Components/RepoCards/repo.module.css
@@ -1,8 +1,202 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .main {
-    background-image: linear-gradient(to top, rgba(45, 230, 116, 0.404) 0%, #00000085 100%);
-    /* background-image: linear-gradient(to top, rgba(150, 150, 150, 0.404) 0%, #00000085 100%), url(./img/otro\ fondo.jpg); */
-    /* background: url(../img/otra.jpg); */
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100vh;
+     display: flex; 
+     flex-wrap: wrap; 
+    justify-content: center; 
+    margin: -15px;
+    margin-bottom: 50px;
+}
+
+.cardContainer {
+    border: 2px solid #ffffff;
+    background-color: rgba(199, 199, 199, 0.568);
+    width: 250px;
+    height: 150px;
+    margin: 1px 5px;
+    border-radius: 20px;
+    padding: 10px;
+    transition: box-shadow, 10ms;
+    transition: border, 500ms;
+}
+
+.cardContainer:hover {
+    /* light blue color #00e1ff 
+    orange #ff9100*/
+    box-shadow: 0 0 15px 2px #ffffff;
+    border: 1px solid transparent;
+}
+
+.cardContainer img {
+    width: auto;
+    height: 180px;
+    display: flex;
+    justify-content: center;
+}
+
+.cardContainer img:hover {
+    width: auto;
+    height: 189px;
+    display: flex;
+    justify-content: center;
+}
+
+.cardName {
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 2px 1px #000000;
+    font-size: 23px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    margin-left: 27px;
+}
+
+.cardAttack {
+    text-align: center;
+    color: #f7e70a;
+    text-shadow: 2px 2px 1px #000000;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    margin-left: 25px;
+}
+.cardType {
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 2px 1px #000000;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 2px;
+   bottom: -80px;
+    margin-left: 25px;
+}
+.types {
+    text-align: center;
+    color: #f7e70a;
+    text-shadow: 2px 2px 1px #000000;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: -20px;
+    margin-left: 25px;
+}
+
+.pagination {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    background-color: #3b3b3b;
+    width: 400px;
+    margin: auto;
+    border-radius: 20px;
+    border: 2px solid white;
+}
+
+.pagination li {
+    text-align: center;
+    color: white;
+    width: fit-content;
+    background-color: transparent;
+    padding: 10px;
+    /* border: 1px solid white; */
+    cursor: pointer;
+    font-size: 25px;
+    font-weight: bolder;
+}
+
+.pagination li.active {
+    /* background-color: white; */
+    color: #000000;
+}
+
+.pagination li button {
+    background-color: transparent;
+    display: flex;
+    border: none;
+    color: white;
+    cursor: pointer;
+    padding: 2px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
+    transition: color 500ms;
+}
+
+.pagination li button:hover {
+    /* background-color: white; */
+    border-radius: 20px;
+    color: #000000;
+}
+
+.msgError {
+    color: #ff9100;
+    text-shadow: 2px 2px #000000;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.cardError {
+    background-color: #000000c7;
+    padding: 20px;
+    justify-content: center;
+    border-radius: 20px;
+    box-shadow: 0px 0px 15px 2px #ff910088;
+}
+
+.cardError img {
+    display: flex;
+    margin: auto;
+    border-radius: 20px;
+}
+
+/* .msgCharge {
+    color: #ffffff;
+    text-shadow: 1px 1px #000000;
+    font-size: 35px;
+    font-weight: bolder;
+    text-align: center;
+} */
+
+.doggy{
+    font-family: sans-serif;
+    color: #ffffff;
+    text-shadow: 2px 2px #000000;
+    font-size: 27px;
+    font-weight: bolder;
+    text-align: center;
+
+}
+/* .containerLoading {
+    background-color: #000000b4;
+    border-radius: 30px;
+    padding: 15px;
+} */
+
+.detail p {
+    text-align: center;
+    /* margin: auto; */
+    font-size: 22px;
+    font-weight: bold;
+    border: 1px solid #ffffff;
+    background: rgb(0, 0, 0);
+    border-radius: 5px;
+    margin-top: 30px;
+    /* background-color: #ff9100; */
+    color: #ffffff;
+    text-shadow: 2px 2px 1px #000000;
+    /* width: fit-content; */
+    padding: 5px 15px;
+}
+
+.detail p:hover{
+    /* border: 2px solid yellow; */
+    box-shadow: 0 0 5px 1px #ffffff;
+    border: 1px solid transparent;
+
 }
