--- a/src/Components/Home/NavBar/Nav.module.css
+++ b/src/Components/Home/NavBar/Nav.module.css
@@ -6,7 +6,7 @@
     /* display: flex; */
     display: grid;
    background-color: rgba(8, 4, 59, 0.753);
-    grid-template-areas: "logo home nav create space again weno weno weno weno hola";
+    grid-template-areas: "logo home nav create space again weno weno weno weno hola chau";
     /*background-color: #ff9100;
     *//*border-bottom: 4px solid #ff9100;
     */padding: 2px;
@@ -25,7 +25,7 @@
 .logout {
     width: 60px;
     height: 60px;
-    grid-area: hola;
+    grid-area: chau;
     display: flex;
     align-items: center;
 }
