--- a/src/Components/Repositories/repo.module.css
+++ b/src/Components/Repositories/repo.module.css
@@ -16,8 +16,8 @@
     border: 2px solid #ffffff;
     background-color: rgba(88, 88, 88, 0.425);;
     width: 320px;
-    height: 300px;
-    margin: 1px 3px;
+    height: 250px;
+    margin: 1px 2px;
     border-radius: 15px;
     padding: 10px;
     transition: box-shadow, 10ms;
@@ -33,6 +33,7 @@
 
 .cardContainer img {
     /* width: auto; */
+    margin-top: 5px;
     height: 50px;
     justify-content: center;
     margin-left: 130px;
